--- a/src/slide-1-title.html
+++ b/src/slide-1-title.html
@@ -20,6 +20,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         @apply(--flex);
       }
+
+      ::shadow h1 {
+        color: var(--orange);
+      }
     </style>
 
     <div class="card" card-top>
