--- a/src/slice-speaker.html
+++ b/src/slice-speaker.html
@@ -7,9 +7,9 @@
       }
     </style>
 
-    <h2>{{name}}</h2>
-    <h3><a href="https://www.twitter.com/{{twitter}}">@{{twitter}}</h3>
-    <img src='{{avatar}}'/>
+    <img src='{{avatar}}' class="avatar" />
+    <h2 name>{{name}}</h2>
+    <h3 social-share><a href="https://www.twitter.com/{{twitter}}">@{{twitter}}</h3>
   </template>
 
   <script>
