content, web story and html5

--- a/src/slide-data.html
+++ b/src/slide-data.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="slice-title.html">
 <link rel="import" href="slice-imgbg.html">
 
-<dom-module id="slide-2-imagetest">
+<dom-module id="slide-data">
   <template>
     <style include="shared-styles">
         :host {
@@ -36,14 +36,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card" card-center>
-      <slice-title title="HTML, Written in stone" text-center></slice-title>
-      <slice-imgbg img="../images/stone.jpeg"></slice-imgbg>
+      <slice-title title="It's all about the data'" text-center></slice-title>
+      <slice-imgbg img="../images/matrix.jpeg"></slice-imgbg>
     </div>
   </template>
 
   <script>
     Polymer({
-      is: 'slide-2-imagetest'
+      is: 'slide-data'
     });
   </script>
 </dom-module>
