--- a/src/slide-setinstone.html
+++ b/src/slide-setinstone.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="slice-title.html">
 <link rel="import" href="slice-imgbg.html">
 
-<dom-module id="slide-2-imagetest">
+<dom-module id="slide-setinstone">
   <template>
     <style include="shared-styles">
         :host {
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script>
     Polymer({
-      is: 'slide-2-imagetest'
+      is: 'slide-setinstone'
     });
   </script>
 </dom-module>
