--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -87,6 +87,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <neon-animatable name="4-samplecode">          
             <slide-4-samplecode></slide-4-samplecode>
           </neon-animatable>
+
+          <neon-animatable name="setinstone">          
+            <slide-setinstone></slide-setinstone>
+          </neon-animatable>
+
+          <neon-animatable name="serverlangs">          
+            <slide-serverlangs></slide-serverlangs>
+          </neon-animatable>
+
+          <neon-animatable name="widgets">          
+            <slide-widgets></slide-widgets>
+          </neon-animatable>
+
+          <neon-animatable name="data">          
+            <slide-data></slide-data>
+          </neon-animatable>
+
+          <neon-animatable name="ajax">          
+            <slide-ajax></slide-ajax>
+          </neon-animatable>
+
+          <neon-animatable name="webapp">          
+            <slide-webapp></slide-webapp>
+          </neon-animatable>
+
+          <neon-animatable name="html5">          
+            <slide-html5></slide-html5>
+          </neon-animatable>
+
+          <neon-animatable name="html5team">          
+            <slide-html5team></slide-html5team>
+          </neon-animatable>
+
         </neon-animated-pages>
       </app-header-layout>
       
