--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -125,6 +125,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </neon-animatable>
 
           <!-- POLYMER HERE -->
+          <neon-animatable name="polyintro">          
+            <slide-polyintro></slide-polyintro>
+          </neon-animatable>
+          <neon-animatable name="polylib">          
+            <slide-polylib></slide-polylib>
+          </neon-animatable>
+          <neon-animatable name="polyele">          
+            <slide-polyele></slide-polyele>
+          </neon-animatable>
+          <neon-animatable name="prlp">          
+            <slide-prlp></slide-prlp>
+          </neon-animatable>
 
           <!-- PWA HERE -->
           <neon-animatable name="whatarepwa">          
@@ -134,7 +146,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <neon-animatable name="pwafeatures">          
             <slide-pwafeatures></slide-pwafeatures>
           </neon-animatable>
-          
+
+          <!-- LIGHTHOUSE HERE -->
+          <neon-animatable name="lighthouse">          
+            <slide-lighthouse></slide-lighthouse>
+          </neon-animatable>
         </neon-animated-pages>
       </app-header-layout>
       
