--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -112,6 +112,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <slide-webapp></slide-webapp>
           </neon-animatable>
 
+          <neon-animatable name="html5bg">          
+            <slide-html5bg></slide-html5bg>
+          </neon-animatable>
+
           <neon-animatable name="html5">          
             <slide-html5></slide-html5>
           </neon-animatable>
@@ -120,6 +124,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <slide-html5team></slide-html5team>
           </neon-animatable>
 
+          <!-- POLYMER HERE -->
+
+          <!-- PWA HERE -->
+          <neon-animatable name="whatarepwa">          
+            <slide-whatarepwa></slide-whatarepwa>
+          </neon-animatable>
+
+          <neon-animatable name="pwafeatures">          
+            <slide-pwafeatures></slide-pwafeatures>
+          </neon-animatable>
+          
         </neon-animated-pages>
       </app-header-layout>
       
