--- a/src/slide-whatarepwa.html
+++ b/src/slide-whatarepwa.html
@@ -12,38 +12,40 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 
 <link rel="import" href="slice-title.html">
-<link rel="import" href="slice-imgbg.html">
+<link rel="import" href="slice-list.html">
 
-<dom-module id="slide-html5">
+<dom-module id="slide-whatarepwa">
   <template>
     <style include="shared-styles">
-        :host {
-            @apply(--flex);
-        }
-
-        slice-title {
-            /* layout */
-            z-index: 2;
-        }
+      :host {
+        @apply(--flex);
+      }
         
-        ::shadow h1 {
+      ::shadow h1 {
+        margin-top: 0;
 
-            /* font */
-            color:var(--white);
-            font-family: var(--font-family-type1);
-        }
+          /* font */
+          color:var(--red);
+          font-family: var(--font-family-type5);
+      }
 
+      slice-title, 
+      slice-list {
+        margin-left: 30vh;
+        padding-left: 4vh;
+        border-left: 10px solid var(--red);
+      }
     </style>
 
     <div class="card" card-center>
-      <slice-title title="HTML5 is... Hawkeye" text-center></slice-title>
-      <slice-imgbg img="../images/hawkeye.jpeg"></slice-imgbg>
+      <slice-title title="Progressive Web Apps" text-left></slice-title>
+      <slice-list elements='["New technologies", "Best of mobile", "Best of native", "Reliable, fast and engaging"]' text-left></slice-list>
     </div>
   </template>
 
   <script>
     Polymer({
-      is: 'slide-html5'
+      is: 'slide-whatarepwa'
     });
   </script>
 </dom-module>
