--- a/src/slice-code.html
+++ b/src/slice-code.html
@@ -10,10 +10,7 @@
     </style>
 
     <syntax-highlight theme="Arta" lang="html">
-        <h1>lorem ipsum</h1>
-        <script>
-            console.log("this is a test");
-        </script>
+      <content></content>
     </syntax-highlight>
   </template>
 
