--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -134,7 +134,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <neon-animatable name="pwafeatures">          
             <slide-pwafeatures></slide-pwafeatures>
           </neon-animatable>
-          
+
+          <neon-animatable name="pwamanifest">          
+            <slide-pwamanifest></slide-pwamanifest>
+          </neon-animatable>          
         </neon-animated-pages>
       </app-header-layout>
       
