--- a/src/slide-4-samplecode.html
+++ b/src/slide-4-samplecode.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/syntax-highlight/syntax-highlight.html">
 <link rel="import" href="shared-styles.html">
 
 <link rel="import" href="slice-code.html">
@@ -29,7 +30,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card" card-top>
       <slice-title title="Vista código"></slice-title>
-      <slice-code></slice-code>
+      <syntax-highlight theme="Arta" lang="html">
+        <h1>lorem ipsum</h1>
+        <script>
+            console.log("this is a test");
+        </script>
+      </syntax-highlight>
     </div>
   </template>
 
