importing slide-list

--- a/src/slide-polylib.html
+++ b/src/slide-polylib.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 
 <link rel="import" href="slice-title.html">
-<link rel="import" href="slice-speaker.html">
+<link rel="import" href="slice-list.html">
 <link rel="import" href="slice-imgbg.html">
 
 <dom-module id="slide-polylib">
