--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -51,9 +51,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar class="logo"><img src="../images/sliceTomator.svg" alt="slice tomator"></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="1-title" href="/1-title">Title</a>
-          <a name="2-imagetest" href="/2-imagetest">Bg image test</a>
-          <a name="3-list" href="/3-list">List of fruits</a>
-          <a name="4-samplecode" href="/4-samplecode">Sample code</a>
+          <a name="setinstone" href="/setinstone">Set in stone</a>
+          <a name="serverlangs" href="/serverlangs">Server langs.</a>
+          <a name="widgets" href="/widgets">Widgets</a>
+          <a name="data" href="/data">Data</a>
+          <a name="ajax" href="/ajax">Ajax</a>
+          <a name="webapp" href="/webapp">WebApp</a>
+          <a name="html5bg" href="/html5bg">HTML5</a>
+          <a name="html5" href="/html5">HTML5 is Hawkeye</a>
+          <a name="html5team" href="/html5team">HTML5 Team</a>
+          <a name="polyintro" href="/polyintro">Polyintro</a>
+          <a name="polylib" href="/polylib">Polymer Library</a>
+          <a name="polyele" href="/polyele">Polymer Elements</a>
+          <a name="prlp" href="/prlp">PRPL</a>
+          <a name="whatarepwa" href="/whatarepwa">What are PWA?</a>
+          <a name="pwafeatures" href="/pwafeatures">PWA Features</a>
+          <a name="pwamanifest" href="/pwamanifest">PWA Manisfest</a>
+          <a name="lighthouse" href="/lighthouse">Lighthouse</a>
+          <a name="data" href="/data">Data</a>
         </iron-selector>
       </app-drawer>
 
@@ -76,6 +91,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <slide-1-title></slide-1-title>
           </neon-animatable>
 
+          <!-- HTML5 INTRO HERE -->
           <neon-animatable name="setinstone">          
             <slide-setinstone></slide-setinstone>
           </neon-animatable>
@@ -134,11 +150,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <neon-animatable name="pwafeatures">          
             <slide-pwafeatures></slide-pwafeatures>
           </neon-animatable>
-        
+
+          <neon-animatable name="pwamanifest">          
+            <slide-pwamanifest></slide-pwamanifest>
+          </neon-animatable>   
+
           <!-- LIGHTHOUSE HERE -->
           <neon-animatable name="lighthouse">          
             <slide-lighthouse></slide-lighthouse>
           </neon-animatable>
+
         </neon-animated-pages>
       </app-header-layout>
       
@@ -213,6 +234,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
+        console.log('aaa');
         this.page = page || '1-title';
       },
 
@@ -222,6 +244,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       _pageChanged: function(page) {
+        console.log('bbb')
         var resolvedPageUrl = this.resolveUrl('slide-' + page + '.html');
         this.importHref(resolvedPageUrl, null, null, true);
       },
