--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -181,9 +181,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   api-key="AIzaSyCIm-nW-uLagGIDkFACm_dXQ-hfS-EV6Z4">
     </firebase-app>
     
-    <!--<firebase-document path="/currentPage"
+    <firebase-document path="/currentPage"
                        data="{{page}}">
-    </firebase-document>-->
+    </firebase-document>
 
     <firebase-document path="/emotions/{{page}}/{{emotion}}"
                        data="[[emotionCounter]]">
@@ -234,7 +234,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        console.log('aaa');
         this.page = page || '1-title';
       },
 
@@ -244,7 +243,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       _pageChanged: function(page) {
-        console.log('bbb')
         var resolvedPageUrl = this.resolveUrl('slide-' + page + '.html');
         this.importHref(resolvedPageUrl, null, null, true);
       },
