--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -164,7 +164,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </app-header-layout>
       
       <template is='dom-if' if="{{viewer}}" >
-        <paper-menu-button emotions-nav class$="{{emotion}}">
+        <paper-menu-button emotions-nav class$="{{_getClassForEmotionNav(emotion)}}">
           <paper-icon-button src="../images/sliceTomator.svg" class="dropdown-trigger"></paper-icon-button>
           <iron-selector selected="{{emotion}}" attr-for-selected="name" class="dropdown-content">
             <paper-item name="smile">smile</paper-item>
@@ -186,7 +186,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </firebase-document>
 
     <firebase-document path="/emotions/{{page}}/{{emotion}}"
-                       data="[[emotionCounter]]">
+                       data="{{emotionCounter}}">
     </firebase-document>
   </template>
 
@@ -209,13 +209,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         emotion:{
           type: Number,
-          value: 'smile',
           observer: '_emotionChanged'
         },
         emotionCounter:{
           type: Number,
           reflectToAttribute: true,
-          value: 0
+          value: null
         },
         emotionValues:{
           type: Object,
@@ -245,6 +244,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _pageChanged: function(page) {
         var resolvedPageUrl = this.resolveUrl('slide-' + page + '.html');
         this.importHref(resolvedPageUrl, null, null, true);
+        console.log(this.emotionCounter);
+        this.set('emotion', null);
       },
 
       _setParams: function(queryParams) {
@@ -254,18 +255,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       _emotionChanged: function(emotion) {
-        if(!this.emotionCounter)
-          this.emotionCounter = 0
-        this.emotionCounter++;
-        this.set('emotionCounter', this.emotionCounter);
-
         if(!this.emotionValues)
           this.emotionValues = {};
-        if(!this.emotionValues['emotion'])
-          this.emotionValues['emotion'] = 0;
+        if(!this.emotionValues[emotion])
+          this.emotionValues[emotion] = 0;
         
-        this.emotionValues['emotion']++;
-        this.set('emotionValues.'+emotion, this.emotionCounter);
+        this.emotionValues[emotion]++;
+
+        this.set('emotionCounter', this.emotionValues[emotion]);
       },
 
       _previousSlide: function(){
@@ -276,6 +273,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _nextSlide: function(){
         this.$.slides.selectNext();
         this.page = this.$.slides.selected;
+      },
+
+      _getClassForEmotionNav: function(emotion) {
+        console.log(emotion);
+        if(!emotion){
+          return '';
+        }else{
+          return emotion + ' voted';
+        }
       }
     });
   </script>
