--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -158,10 +158,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-menu-button emotions-nav class$="{{emotion}}">
           <paper-icon-button src="../images/sliceTomator.svg" class="dropdown-trigger"></paper-icon-button>
           <iron-selector selected="{{emotion}}" attr-for-selected="name" class="dropdown-content">
-            <paper-item name="smile">smile</paper-item>
-            <paper-item name="interest">interest</paper-item>
-            <paper-item name="neutral">neutral</paper-item>
-            <paper-item name="boring">boring</paper-item>
+            <paper-item name="boring"></paper-item>
+            <paper-item name="smile"></paper-item>
+            <paper-item name="neutral"></paper-item>
+<!--             <paper-item name="interest"></paper-item>
+ -->            
           </iron-selector>
         </paper-menu-button>
       </template>
