--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <h1 main-title>PWA <span>con Polymer</span></h1>
-            <paper-icon-button navBar icon="icons:more-vert" drawer-toggle></paper-icon-button>
+            <paper-icon-button navBar icon="menu" drawer-toggle></paper-icon-button>
           </app-toolbar>
         </app-header>
 
