--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <slidetomator-shell></slidetomator-shell>
     <!-- Built with love using Polymer Starter Kit -->
+    <noscript>Your browser does not support JavaScript!</noscript>
   </body>
 </html>
