--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -275,6 +275,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             max-width: 100%;
             max-height: 100%;
             overflow: hidden;
+            height: 100%;
 
         }
             slice-imgbg:after {
