--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -67,6 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar class="logo"><img src="../images/sliceTomator.svg" alt="slice tomator"></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="1-title" href="/1-title">Title</a>
+          <a name="links" href="/links">Title</a>
           <a name="setinstone" href="/setinstone">Set in stone</a>
           <a name="serverlangs" href="/serverlangs">Server langs.</a>
           <a name="widgets" href="/widgets">Widgets</a>
@@ -105,6 +106,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             role="main">
           <neon-animatable name="1-title">
             <slide-1-title></slide-1-title>
+          </neon-animatable>
+
+          <neon-animatable name="links">
+            <slide-links></slide-links>
           </neon-animatable>
 
           <!-- HTML5 INTRO HERE -->
