--- a/src/slice-imgbg.html
+++ b/src/slice-imgbg.html
@@ -6,6 +6,10 @@
       :host {
         width: 100%;
       }
+      img {
+        max-width: 100%;
+        max-height:100%;
+      }
     </style>
 
     <img src="{{img}}"/>
