--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -278,14 +278,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </template>
       </app-drawer-layout>
 
-    <firebase-app auth-domain="slidetomator-6a36d.firebaseapp.com"
-                  database-url="https://slidetomator-6a36d.firebaseio.com/"
-                  api-key="AIzaSyCIm-nW-uLagGIDkFACm_dXQ-hfS-EV6Z4">
+    <firebase-app auth-domain="maestros-constructores.firebaseapp.com"
+                  database-url="https://maestros-constructores.firebaseio.com/"
+                  api-key="AIzaSyDLGuBLT1S8TupDhJtNPPy8Vupa9SlSfKs">
     </firebase-app>
-<!-- 
+
     <firebase-document path="/currentPage"
                        data="{{page}}">
-    </firebase-document> -->
+    </firebase-document>
 
     <firebase-document id='firemotion' path="/emotions/{{page}}/{{emotion}}"
                        data="{{emotionCounter}}">
