victor y glo speak

--- a/src/slide-ajax.html
+++ b/src/slide-ajax.html
@@ -21,11 +21,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             @apply(--flex);
         }
 
-        slice-title {
-            /* layout */
-            z-index: 2;
-        }
-        
         ::shadow h1 {
 
             /* font */
@@ -37,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card" card-center>
       <slice-title title="Ajax, the game changer" text-center></slice-title>
-      <slice-imgbg img="../images/ajax.jpeg"></slice-imgbg>
+      <slice-imgbg img="../images/ajax.jpeg" fade></slice-imgbg>
     </div>
   </template>
 
