--- a/src/slide-data.html
+++ b/src/slide-data.html
@@ -20,11 +20,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         :host {
             @apply(--flex);
         }
-
-        slice-title {
-            /* layout */
-            z-index: 2;
-        }
         
         ::shadow h1 {
 
@@ -37,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card" card-center>
       <slice-title title="It's all about the data'" text-center></slice-title>
-      <slice-imgbg img="../images/matrix.jpeg"></slice-imgbg>
+      <slice-imgbg img="../images/matrix.jpeg" fade></slice-imgbg>
     </div>
   </template>
 
