--- a/src/slide-pwamanifest.html
+++ b/src/slide-pwamanifest.html
@@ -33,6 +33,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding-left: 4vh;
         border-left: 10px solid var(--red);
       }
+      
+
+      @media screen and (max-width: 460px) {
+
+        slice-title, 
+        slice-list {
+          margin-left: 5vh;
+          padding-left: 4vh;
+        }
+      }
     </style>
 
     <div class="card" card-top>
