--- a/src/slide-widgets.html
+++ b/src/slide-widgets.html
@@ -37,7 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card" card-center>
       <slice-title title="Widgets, the dark era" text-center></slice-title>
-      <slice-imgbg img="../images/widgets.jpeg"></slice-imgbg>
+      <slice-imgbg img="../images/widgets.jpeg" fade></slice-imgbg>
     </div>
   </template>
 
