--- a/src/slide-lighthouse.html
+++ b/src/slide-lighthouse.html
@@ -34,11 +34,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       slice-list {
         border-left: 10px solid var(--red);
       }
+      slice-list {
+        color:var(--white);
+      }
     </style>
 
     <div class="card" card-center>
       <slice-title title="Lighthouse, auditing and performance metrics for PWA" text-center></slice-title>
-      <slice-imgbg img="" text-center></slice-imgbg>
+      <slice-imgbg img="" text-center fade></slice-imgbg>
       <slice-list elements="{{elements}}"></slice-list>
     </div>
 
