original title is back

--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -111,7 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
-            <h1 main-title><small>Como Ser</small>maestros <span>constructoreS</span></h1>
+            <h1 main-title><small>PWA</small>con <span>Polymer</span></h1>
             <paper-icon-button navBar drawer-toggle></paper-icon-button>
           </app-toolbar>
         </app-header>
