back to original index

--- a/src/slidetomator-shell.html
+++ b/src/slidetomator-shell.html
@@ -66,8 +66,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer class="slices-nav" align="end">
         <app-toolbar class="logo"><img src="../images/sliceTomator.svg" alt="slice tomator"></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <!-- <a name="1-title" href="/1-title">Title</a>
-          <a name="links" href="/links">Title</a>
+          <a name="1-title" href="/1-title">Title</a>
+          <a name="links" href="/links">Links</a>
           <a name="setinstone" href="/setinstone">Set in stone</a>
           <a name="serverlangs" href="/serverlangs">Server langs.</a>
           <a name="widgets" href="/widgets">Widgets</a>
@@ -85,9 +85,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="pwafeatures" href="/pwafeatures">PWA Features</a>
           <a name="pwamanifest" href="/pwamanifest">PWA Manisfest</a>
           <a name="lighthouse" href="/lighthouse">Lighthouse</a>
-          <a name="data" href="/data">Data</a> -->
+          <a name="data" href="/data">Data</a>
 
-          <a name="ui-1" href="/ui-1">Quienes somos</a>
+          <!--<a name="ui-1" href="/ui-1">Quienes somos</a>
           <a name="ui-2" href="/ui-2">Antes 1</a>
           <a name="ui-3" href="/ui-3">Despues 1</a>
           <a name="ui-4" href="/ui-4">Criterios 1</a>
@@ -102,7 +102,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="ui-13" href="/ui-13">Criterios 4</a>
           <a name="ui-14" href="/ui-14">Antes 5</a>
           <a name="ui-15" href="/ui-15">Despues 5</a>
-          <a name="ui-16" href="/ui-16">Criterios 5</a>
+          <a name="ui-16" href="/ui-16">Criterios 5</a>-->
         </iron-selector>
       </app-drawer>
 
